# Sentiment_Analysis

./: NLTK.py  clean.py  main.py  pyproject.toml  requirements.txt
nltk_data/tokenizers/punkt/PY3/: estonian.pickle
solution/: clean.py
