[tool.poetry]
name = "tokenizationcleaningnltk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
porter2stemmer = "^1.0"
nameparser = "^1.0"
ner = "^0.1.0"
ner-d = "^0.3.0"
nerd = "^1.0"
scikitcrf-ner = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
